# aerospike-engine

./: README.md  laval.msh  update-boundary.py
0/: T  U  p
0.orig/: T  U  p
aerospike/: gen-mesh.sh
aerospike/0.orig/: T  U  p
aerospike/constant/polyMesh/: neighbour
aerospike/constant/polyMesh/sets/: vol1
aerospike/mesh_aerospike/: CMakeLists.txt  aerospike-structured.geo  aerospike.cpp  aerospike.geo
aerospike/system/: controlDict  fvSchemes  setFieldsDict
constant/: thermophysicalProperties
constant/polyMesh/: boundary  cellZones  faces  neighbour  owner  points
constant/polyMesh/sets/: cellZone_0  inlet
laval/: gen-mesh.sh  update-boundary.py
laval/0.orig/: T
laval/constant/polyMesh/: boundary  faces  owner
laval/mesh/: CMakeLists.txt  copy-msh.sh  laval.geo  laval_structured.geo
mesh/: CMakeLists.txt  laval.cpp
system/: controlDict  fvSolution
